<resources>
    <string name="app_name">ToeTacTic</string>


    <string name="protocol">https://</string>
    <string name="domain">generic-game-service.herokuapp.com</string>
    <string name="base_path">/Game</string>
    <string name="create_game_path">/</string>
    <string name="join_game_path">/%1s/join</string>
    <string name="poll_game_path">/%1s/poll</string>
    <string name="update_game_path">/%1s/update</string>
    <string name="game_service_key">gjF9ebA3Ix</string>
    <string name="tre_pa_rad_logo">Tre på rad logo</string>
    <string name="knots_and_crosses">Knots and Crosses</string>
    <string name="start">Start</string>
    <string name="join">Join</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_name">Player name</string>
    <string name="toetactic_title">ToeTacTic</string>
    <string name="gameid">GameId</string>
    <string name="player_2">Player 2</string>
    <string name="player_1">Player 1</string>
</resources>