<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">


    <TextView
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/player_1"
        android:textSize="35dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="vs."
        android:textSize="35dp"/>


    <TextView
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/player_2"
        android:textSize="35dp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginTop="60dp"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <TextView
        android:id="@+id/gameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/gameid"
        android:textSize="35dp"/>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b00"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:backgroundTint="#2C2C2E"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

            <Button
                android:id="@+id/b01"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:backgroundTint="#2C2C2E"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

            <Button
                android:id="@+id/b02"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:backgroundTint="#2C2C2E"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b10"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:backgroundTint="#2C2C2E"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

            <Button
                android:id="@+id/b11"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:backgroundTint="#2C2C2E"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

            <Button
                android:id="@+id/b12"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:backgroundTint="#2C2C2E"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b20"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="" android:layout_margin="4dp"
                android:backgroundTint="#2C2C2E"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

            <Button
                android:id="@+id/b21"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:backgroundTint="#2C2C2E"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

            <Button
                android:id="@+id/b22"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:backgroundTint="#2C2C2E"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>